# hash-calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  hashcalculator.cpp  hashcalculator.h  hashcalculator.pro  hashcalculator.qrc  hashcalculator.rc  hashcalculator_en.ts  hashcalculator_zh_CN.ts  main.cpp  widget.cpp  widget.h  widget.ui
